[package]
name = "parttable"
version = "1.5.0"
edition = "2021"
authors =["Loucas K. <loucas.kreger@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
prettytable-rs = "0.10.0"
byteorder = "1.4.3"
chrono = "0.4.23"
csv = "1.2.1"

[package.metadata.deb]
assets = [
    ["target/release/parttable", "usr/bin/", "755"],
]